Increases input font to 16px on iPhone 5 (to avoid auto zoom on focus)

--- a/style/app.css
+++ b/style/app.css
@@ -64,7 +64,7 @@ html {
   max-height: 100%;
   overflow: hidden;
   background: var(--dark-100);
-  font-size: 50%; /* 8px */
+  font-size: 55.556%; /* 8.889px */
 }
 
 @media (min-width: 340px) {
